External js file

--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
 		</title>
 	</head>
 	<body>
-		<script>
-			console.log("Hello there, planet earth!!");
-		</script>
+		<script src="index.js"></script>
 	</body>
 </html>
